adding link to react search engine

--- a/index.html
+++ b/index.html
@@ -592,45 +592,65 @@
           </div>
           <div class="row webRow">
               <div class="col-12 col-md-4">
-              <div class="webImgContainer" id="localScrapeLink">
-                <h2 class="circleHeading">Jackson Pollock Game</h2>
-                <h3 class="circleHeadingTwo">Memory-Style React.JS Game</h3>
-                <div class="circle">
-                  <div class="front">
-                    <img width="250" height="250" src="assets/images/pollock.png" alt="pollockImg">
-                  </div>
-                  <div class="circle">
-                    <div class="back" id="pollockBack">
-                      <br>
-                      <br>
-                      <p class="text">
-                        Full Stack Application.  <br> Made with React.JS as practice with states, This app utilizes Node.JS, React.JS, and Bootstrap 4.0.  Click to visit on Heroku.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-              <div class="col-12 col-md-4">
-                  <div class="webImgContainer" id="localScrapeLink">
-                    <h2 class="circleHeading">The Local Scrape</h2>
-                    <h3 class="circleHeadingTwo">Full Stack Web Scraping App</h3>
+                  <div class="webImgContainer" id="nytReactLink">
+                    <h2 class="circleHeading">NYT Historial Articles</h2>
+                    <h3 class="circleHeadingTwo">MERN powered Search Engine</h3>
                     <div class="circle">
                       <div class="front">
-                        <img width="250" height="250" src="assets/images/localScrape.png" alt="localScrapeImg">
+                        <img width="250" height="250" src="assets/images/nytReact.png" alt="pollockImg">
                       </div>
                       <div class="circle">
-                        <div class="back" id="localScrapeBack">
+                        <div class="back" id="nytReactBack">
                           <br>
                           <br>
                           <p class="text">
-                            Full Stack Application.  <br> Utilizes Node, Express, MongoDB, Mongoose, Cheerio, Axios, and Handlebars. Click to visit on Heroku.
+                            Full Stack Application.  <br> Made with React.JS, Node.JS, React.JS, MongoDB, Express, and Bootstrap 4.0.  Click to visit on Heroku.
                           </p>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
+              <div class="col-12 col-md-4">
+                <div class="webImgContainer" id="localScrapeLink">
+                  <h2 class="circleHeading">Jackson Pollock Game</h2>
+                  <h3 class="circleHeadingTwo">Memory-Style React.JS Game</h3>
+                  <div class="circle">
+                    <div class="front">
+                      <img width="250" height="250" src="assets/images/pollock.png" alt="pollockImg">
+                    </div>
+                    <div class="circle">
+                      <div class="back" id="pollockBack">
+                        <br>
+                        <br>
+                        <p class="text">
+                          Full Stack Application.  <br> Made with React.JS as practice with states, This app utilizes Node.JS, React.JS, and Bootstrap 4.0.  Click to visit on Heroku.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-4">
+                <div class="webImgContainer" id="localScrapeLink">
+                  <h2 class="circleHeading">The Local Scrape</h2>
+                  <h3 class="circleHeadingTwo">Full Stack Web Scraping App</h3>
+                  <div class="circle">
+                    <div class="front">
+                      <img width="250" height="250" src="assets/images/localScrape.png" alt="localScrapeImg">
+                    </div>
+                    <div class="circle">
+                      <div class="back" id="localScrapeBack">
+                        <br>
+                        <br>
+                        <p class="text">
+                          Full Stack Application.  <br> Utilizes Node, Express, MongoDB, Mongoose, Cheerio, Axios, and Handlebars. Click to visit on Heroku.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="myTechCommLink">
                   <h2 class="circleHeading">My Tech Community</h2>
@@ -650,7 +670,6 @@
                     </div>
                   </div>
                 </div>
-              </div>
               </div>
           <div class="row">
               <div class="col">
