--- a/index.html
+++ b/index.html
@@ -448,6 +448,26 @@
           </div>
           <div class="row webRow">
               <div class="col-12 col-md-4">
+                  <div class="webImgContainer" id="homeStedLink">
+                      <h2 class="circleHeading">The Barter Shop</h2>
+                      <h3 class="circleHeadingTwo">An Online Community</h3>
+                    <div class="circle">
+                      <div class="front">
+                        <img width="250" height="250" src="assets/images/bartShop.png" alt="brtShopImg">
+                      </div>
+                      <div class="circle">
+                        <div class="back" id="bartShopBack">
+                          <br>
+                          <br>
+                          <p class="text">
+                            Online Community/Social Network for barter and trading goods and services.<br> React.JS, Node.JS, Express, React.JS, Mongoose,Various NPMs.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              <div class="col-12 col-md-4">
                 <div class="webImgContainer" id="homeStedLink">
                     <h2 class="circleHeading">HomeStead</h2>
                     <h3 class="circleHeadingTwo">Web Based SaaS</h3>
@@ -460,33 +480,13 @@
                         <br>
                         <br>
                         <p class="text">
-                          Community org web app for HOAs and Planned Communities.<br> Node, Express, Handlebars, Sequelize, Sass, Various NPMs.
+                          Community org web app for HOAs and Planned Communities.<br> Node, Express, Handlebars, Sequelize, SCSS, Various NPMs.
                         </p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-            <div class="col-12 col-md-4">
-              <div class="webImgContainer" id="listenHereLink">
-                  <h2 class="circleHeading">ListenHear</h2>
-                  <h3 class="circleHeadingTwo">Local Music Solution</h3>
-                <div class="circle">
-                  <div class="front">
-                    <img width="250" height="250" src="assets/images/listenHer.png" alt="listenHearImg">
-                  </div>
-                  <div class="circle">
-                    <div class="back" id="listenHereBack">
-                      <br>
-                      <br>
-                      <p class="text">
-                        Mobile/Browser App.  <br> Uses 6 APIs to preview and build same day local music experiences.  End Page in Development; Click to Visit.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
             <div class="col-12 col-md-4">
               <div class="webImgContainer" id="recipeSaverLink">
                   <h2 class="circleHeading">Two Tablespoons</h2>
@@ -557,6 +557,26 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-12 col-md-4">
+                      <div class="webImgContainer" id="listenHereLink">
+                          <h2 class="circleHeading">ListenHear</h2>
+                          <h3 class="circleHeadingTwo">Local Music Solution</h3>
+                        <div class="circle">
+                          <div class="front">
+                            <img width="250" height="250" src="assets/images/listenHer.png" alt="listenHearImg">
+                          </div>
+                          <div class="circle">
+                            <div class="back" id="listenHereBack">
+                              <br>
+                              <br>
+                              <p class="text">
+                                Mobile/Browser App.  <br> Uses 6 APIs to preview and build same day local music experiences.  End Page in Development; Click to Visit.
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                 <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="vcLink">
                         <h2 class="circleHeading">Vacant Company</h2>
