--- a/index.html
+++ b/index.html
@@ -898,7 +898,8 @@
       </div>
     </div>
     </div>
-
+    </div>
+  </div>
     <div id="aboutDiv">
       <div class="row aboutRow">
         <div class="col aboutBtwnBanners">
