resume copy update

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     </span>
                   </li>
                   <li>
-                      <span class="ability-title">Express.JS</span>
+                      <span class="ability-title">Express</span>
                       <span class="ability-score">
                         <span class="fas fa-star"></span>
                         <span class="fas fa-star"></span>
@@ -227,7 +227,7 @@
                       <span class="fas fa-star"></span>
                       <span class="fas fa-star"></span>
                       <span class="fas fa-star"></span>
-                      <span class="fas fa-star"></span>
+                      <span class="far fa-star"></span>
                       <span class="far fa-star"></span>
                     </span>
                   </li>
@@ -237,7 +237,7 @@
                       <span class="fas fa-star"></span>
                       <span class="fas fa-star"></span>
                       <span class="fas fa-star"></span>
-                      <span class="fas fa-star"></span>
+                      <span class="far fa-star"></span>
                       <span class="far fa-star"></span>
                     </span>
                   </li>
@@ -344,6 +344,7 @@
                 </div>
               <div class="companyWrapper">
                 <div class="experienceTitle">NC State University</div> 
+                <br>
                 <div class="time">Aug 2006 - May 2011</div> 
               </div> 
               <div class="jobWrapper">
@@ -360,83 +361,61 @@
   	      <div class="container experienceContainer" id="rowFourContainer">
             <h3 class="experienceTitleLead">Work Experience</h3>
                 <div class="experienceWrapper">
-                <div class="companyWrapper">
-                  <div class="experienceTitle"><a href="https://www.furniturelab.com/" target="_blank">FurnitureLab</a></div>
-                  <div class="time">June 2017 - Jan 2018</div>
-                </div>
-                <div class="jobWrapper">
-                  <div class="experienceTitle">Account Manager</div>
-                  <div class="companyDescription">
-                    <ul>
-                      <li>Managed Sales for California, Kansas, Missouri, Oklahoma, and Arkansas.</li>
-                      <li>Maintained existing clients while building new business</li>
-                      <li>Worked with committee to develop 2018 Biz Health &AMP; Marketing Strategy</li>
-                    </ul> 
-                  </div>
-                </div>
+                    <div class="companyWrapper">
+                        <div class="experienceTitle">Joe Wright Web Dev</div> 
+                        <div class="time">Nov 2017 - Present
+                          <br><br>
+                        </div> 
+                      </div> 
+                      <div class="jobWrapper">
+                        <div class="experienceTitle">Freelance Web Developer</div> 
+                        <div class="companyDescription">
+                          <ul>
+                            <li>Create, code and maintain visually appealing sites from layout to final functionality according to the unique needs of my clients.</li>
+                            <li>Developed solutions using an Agile process with constant client engagement to ensure satisfaction.</li>
+                            <li>Full Stack Engineering working through upwork.com, remote.com, and my own LLC Joe Wright Web Dev.</li>
+                          </ul>
+                        </div>
+                      </div>
                 <div class="companyWrapper">
                   <div class="experienceTitle"><a href="https://www.spoonflower.com/" target="_blank">Spoonflower</a></div> 
-                  <div class="time">Aug 2015 - July 2017</div> 
+                  <div class="time">Oct 2015 - July 2017</div> 
                 </div>
                 
                 <div class="jobWrapper">
                   <div class="experienceTitle">Senior Business Intelligence Analyst</div> 
                   <div class="companyDescription">
                       <ul>
-                        <li>Fostered collaboration amongst international teams at eCommerce brand to identify and address issues pertaining to UX</li>
+                        <li>Led cross-team business intelligence initiatives </li>
+                        <li>Led Team Optimizing UX/UI for B2B clients</li>
+                        <li>Reported executive level data via  MySQL &AMP; VBA</li>
+                        <li>Consistently lead team in productivity metrics</li>
                         <li>Received CRAFT-E Award, a monthly award from the company recognizing a top contributor embodying their values. (200 employee company)</li>
-                        <li>Led cross-departmental team to establish real-time Biz Health dashbords for company executives via MySQL and Amazon QuickSight.</li>
-                        <li>Began in Customer Service after Masters.  Moved to business analytics position after 6 weeks due to Engineering background and analytical proficiencies.</li>
                       </ul>  
                   </div>
                 </div>
-              <div class="companyWrapper">
-                <div class="experienceTitle">Various Locations</div> 
-                <div class="time">Aug 2006 - Aug 2015
-                  <br><br>
-                  <img src="assets/images/typewriter.png" alt="typewriter" id="typewriterImg">
+                <div class="companyWrapper">
+                  <div class="experienceTitle"><a href="https://www.furniturelab.com/" target="_blank">FurnitureLab</a></div>
+                  <div class="time">July 2017 - December 2017</div>
+                </div>
+                <div class="jobWrapper">
+                  <div class="experienceTitle">Account Manager</div>
+                  <div class="companyDescription">
+                    <ul>
+                      <li>Consulted with Clients to understand needs and requirements for complex design issues in market</li>
+                      <li>Consulted with leadership and decision makers during web and marketing rebranding cycle</li>
+                      <li>Initiated &AMP; optimized email marketing strategy in assigned territory</li>
+                      <li>Managed west coast sales territories</li>
+                    </ul> 
+                  </div>
+                </div>
+                <div id="resumeBottom">
+                    <img src="assets/images/resumeBottomBanner.png" alt="visit my Culture Fit section to know more about me personally!" id="resumeBottomImg">
                 </div> 
-              </div> 
-              <div class="jobWrapper">
-                <div class="experienceTitle">Chef/Bartender </div> 
-                <div class="companyDescription">
-                  <p>Prior to entering the professional world via Spoonflower, I worked at a handful of great restaurants.  During my undergraduate and graduate degrees, cooking paid the bills.  I've been a baker at an artistinal French guild bakery, a sous chef at a high end vegan restaurant, spent years working under a James Beard chef, and bartended at and booked for some of my favorite music venues.  These experiences are a big part of where my great customer service attitude comes from.</p>   
-                </div>
-              </div>
             </div>
           </div>
         </div>
-        <div class="experience row section-padding" id="resumeRowFive">
-            <div class="container experienceContainer" id="rowFiveContainer">
-              <h3 class="experienceTitleLead2">Individual Enterprise</h3>
-                  <div class="experienceWrapper">
-                  <div class="companyWrapper">
-                    <div class="experienceTitle">Freelance Graphic &AMP; Web Design</div>
-                  </div>
-                  <div class="jobWrapper">
-                    <div class="companyDescription">
-                        <p>
-                          My work as a visual artist translated to digital formats when I learned the Adobe Suite upon starting at Spoonflower.  I've produced more show posters, t-shirt designs, and album art for local venues and bands than I can recall.  My design process often begins with pen and ink sketches that are later adapted into digital formats for coloring.  I borrow that process in my web work, often beginning by carefully wireframing a site and it's life by hand before translating it into the digital space.
-                        </p>
-                    </div>
-                  </div>
-                  <div class="companyWrapper">
-                    <div class="experienceTitle">Artist</div> 
-                  </div>
-                  <div class="jobWrapper">
-                    <div class="companyDescription">
-                        <p>
-                          I started making art at 22 as a way to take pause while writing my thesis, painting abstractions of scenes from the books I was writing about.  I had my first gallery show the same year, and continued to show nearly monthly for the next four years.  During that period I was twice the Artist-In-Residence at the Blake Street Gallery in Raleigh's historic city market block.  I still actively show and produce art.  My philosophy of art informs my philosophy of coding in that both processes begin by asking what must be told in the narrative and then ask in what way can the realized focus be best told.
-                        </p>
-                    </div>
-                  </div>
-                  <div id="resumeBottom">
-                      <img src="assets/images/resumeBottomBanner.png" alt="visit my Culture Fit section to know more about me personally!" id="resumeBottomImg">
-                  </div> 
-                </div>
-            </div>
-          </div>
-        </div>
+      </div>
     </div>
 
     <div id="websitesDiv">
