added pfg project

--- a/index.html
+++ b/index.html
@@ -496,6 +496,26 @@
           </div>
             <div class="row webRow">
                 <div class="col-12 col-md-4">
+                    <div class="webImgContainer" id="homeStedLink">
+                        <h2 class="circleHeading">Pie Face Girls Home</h2>
+                        <h3 class="circleHeadingTwo">React.JS Agency Work</h3>
+                      <div class="circle">
+                        <div class="front">
+                          <img width="250" height="250" src="assets/images/pfgImg.png" alt="pfgImg">
+                        </div>
+                        <div class="circle">
+                          <div class="back" id="pfgBack">
+                            <br>
+                            <br>
+                            <p class="text">
+                              Web Content for National Recording Artist Pie Face Girls. In Progress.<br> React.JS, Node.JS, Express, React.JS, Mongoose, Various NPMs.
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="col-12 col-md-4">
                     <div class="webImgContainer" id="bernarooLink">
                         <h2 class="circleHeading">Bernaroo</h2>
                         <h3 class="circleHeadingTwo">Public Event Site</h3>
