give it one last review in the morning, but overall finished

--- a/portfolio.html
+++ b/portfolio.html
@@ -191,6 +191,29 @@
                                         </div>
                                         <!-- WORK 6 END -->
                                         <!-- WORK 7 START -->
+                                        <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item uxui frontend professional jqueryIso">
+                                            <a class="open-project" target="_blank" href="https://joewrightnc.github.io/OriginalPortfolio/">
+                                                <div class="portfolio-column">
+                                                    <div class="portfolio-hover">
+                                                        <div class="portfolio-content">
+                                                            <h2>jQuery Single Page Portfolio</h2>
+                                                            <hr>
+                                                            <p>
+                                                                My original personal portfolio: a single page modern framework style app built entirely with jQuery. 
+                                                                <br> 
+                                                                jQuery, CSS3, Custom CSS3 Animations, Bootstrap4
+                                                                <br>
+                                                                Click to visit on Github Pages
+                                                            </p>
+                                                        </div>
+                                                        <div class="portfolio-overlay"></div>
+                                                    </div>
+                                                    <img src="images/portfolio/originalPort.png" alt="">
+                                                </div>
+                                            </a>
+                                        </div>
+                                        <!-- WORK 7 END -->
+                                        <!-- WORK 7 START -->
                                         <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item uxui fullstack professional nodeJS jqueryIso">
                                             <a class="open-project" target="_blank" href="https://salty-ridge-97695.herokuapp.com/">
                                                 <div class="portfolio-column">
