updated copy on resume regarding windhover

--- a/resume.html
+++ b/resume.html
@@ -277,7 +277,9 @@
                                             <p>
                                                 •Benjamin Franklin Scholarship Receipient (highly competitive, approximately 10 recipients per year)
                                                 <br/>
-                                                •3 year tenure as an Editor-in-Chief in Student media
+                                                •3 year tenure as an Editor-in-Chief in Student Media, overseeing Windhover Design &amp; Literary magazine.
+                                                <br/>
+                                                •3 time Golden Crown Design Award receipient, EIC Windhover Magazine
                                                 <br/>
                                                 •3.8 Engineering, 4.0 English
                                             </p>
