bernaroo portfolio error fixed:

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
                                         <!-- WORK 2 END -->
                                         <!-- WORK 3 START -->
                                         <div class="col-md-4 col-sm-6 col-xs-12 portfolio-item uxui professional frontend jqueryIso">
-                                            <a class="open-project" target="_blank" href="project-details.html">
+                                            <a class="open-project" target="_blank" href="http://www.bernaroomusicfest.com/index.html">
                                                 <div class="portfolio-column">
                                                     <div class="portfolio-hover">
                                                         <div class="portfolio-content">
@@ -116,7 +116,7 @@
                                                         </div>
                                                         <div class="portfolio-overlay"></div>
                                                     </div>
-                                                    <img src="http://www.bernaroomusicfest.com/index.html" alt="">
+                                                    <img src="images/portfolio/bernaroo.png" alt="">
                                                 </div>
                                             </a>
                                         </div>
